UPDATE: Changed styles on layouts 1,2,3 to fix smaller issues to align with requiremnts

--- a/css_project/layout2.css
+++ b/css_project/layout2.css
@@ -17,7 +17,7 @@ header
 }
 .content {
     display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: 2fr 1fr; 
     gap: 10px; 
     grid-column: 1;
     grid-row: 2;
@@ -25,11 +25,31 @@ header
 .nav 
 {
     grid-column: 1/ span 2;
+    display: flex;
+    flex-direction: row;
 }
+
+.nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none; 
+    
+}
+
+.nav li, a 
+{
+    margin-right: 10px; ;
+}
+
+
 .content, .sidebar, .nav
 {
     background-color: green;
     margin: 10px; 
+}
+.sidebar ol 
+{
+    list-style-type: none;
 }
 
 .footer 
